Add API test buttons and fix frontend - add testAPI and loadModels functions

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -25,6 +25,16 @@
 
         <!-- Main Content -->
         <div id="main-content" class="main-content" style="display: none;">
+            <!-- API Test Section -->
+            <div class="api-test-section">
+                <h3>🔧 Тест API</h3>
+                <div class="api-buttons">
+                    <button class="btn btn-primary" onclick="testAPI()">Тест API</button>
+                    <button class="btn btn-secondary" onclick="loadModels()">Получить модели</button>
+                </div>
+                <div id="api-result" class="api-result"></div>
+            </div>
+            
             <!-- Navigation -->
             <nav class="nav-tabs">
                 <button class="nav-tab active" data-tab="models">📱 Модели</button>
