--- a/test.html
+++ b/test.html
@@ -4,7 +4,8 @@
     <title>Test Page</title>
 </head>
 <body>
-    <h1>Test Page Works!</h1>
+    <h1>Test Page Works! 🎉</h1>
     <p>If you see this, Vercel is working correctly.</p>
+    <p>Root Directory is now empty - files are in root!</p>
 </body>
 </html>
